progress bar and model training

--- a/Application/startwidget.ui
+++ b/Application/startwidget.ui
@@ -155,7 +155,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_401">
+       <widget class="QPushButton" name="submitButton">
         <property name="maximumSize">
          <size>
           <width>200</width>
